--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ webassets = "*"
 doit = "*"
 unidecode = "*"
 yuicompressor = "*"
+restructuredtext-lint = "*"
 
 [requires]
 python_version = "3.7"
