--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,6 +14,11 @@ build:
     # nodejs: "16"
     # rust: "1.55"
     # golang: "1.17"
+    
+# add other format for offline reader
+formats:
+  - pdf
+  - epub
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
