Added API documentation start
* Also cleanup of how files were picked, just download all archive and
  extract.

* Share download code.

* No need to update docs in Sphinx, it's called by update only.

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@
 *.html
 tmp/
 cache
-nuitka-factory
-nuitka-master
+Nuitka-factory
+Nuitka-develop
+Nuitka-master
 output
 .vscode/tags
 state_data.json
