--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.py[co]
 .doit.db*
 *.html
+*.tmp
 tmp/
 cache
 Nuitka-factory
@@ -10,3 +11,4 @@ output
 .vscode/tags
 state_data.json
 doc_generated
+doc/Changelog.rst
