Add favicon handling for Sphinx
* Also apply optipng statically, we did it on site creation, but
  that is unnecessary.

--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,7 @@ sphinx-rtd-theme = "*"
 "sphinxcontrib.twitter" = "*"
 ablog = "*"
 sphinxcontrib-youtube = "*"
+sphinx-favicon = "*"
 
 [requires]
 python_version = "3.9"
