Add sitemap to sphinx build.

--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ sphinx-rtd-theme = "*"
 ablog = "*"
 sphinxcontrib-youtube = "*"
 sphinx-favicon = "*"
+sphinx-sitemap = "*"
 
 [requires]
 python_version = "3.9"
