Social share buttons

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,4 +11,5 @@
     },
     "restructuredtext.confPath": "",
     "python.formatting.provider": "black",
+    "python.analysis.extraPaths": ["Nuitka-factory"]
 }
