More typo corrections

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,45 @@
     },
     "restructuredtext.confPath": "",
     "python.formatting.provider": "black",
-    "python.analysis.extraPaths": ["Nuitka-factory"]
+    "python.analysis.extraPaths": ["Nuitka-factory"],
+    "cSpell.words": [
+        "appdirs",
+        "bytecode",
+        "ccache",
+        "clcache",
+        "conda",
+        "ctypes",
+        "devel",
+        "distutils",
+        "Doxygen",
+        "elif",
+        "EPEL",
+        "importlib",
+        "isort",
+        "libc",
+        "libpython",
+        "lxml",
+        "metaclass",
+        "MSVC",
+        "nofollow",
+        "Nuitka",
+        "onefile",
+        "Podman",
+        "pyenv",
+        "pyproject",
+        "pyside",
+        "pystone",
+        "PYTHONHASHSEED",
+        "PYTHONPATH",
+        "redist",
+        "Roadmap",
+        "Scons",
+        "Setuptools",
+        "Tkinter",
+        "traceback",
+        "tracebacks",
+        "ucrt",
+        "uncompiled",
+        "whitebox"
+    ],
 }
