Autoformat for everything in pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "elif",
         "EPEL",
         "importlib",
+        "Impressum",
         "isort",
         "libc",
         "libpython",
