Add missing word

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "appdirs",
         "bytecode",
         "ccache",
+        "CEST",
         "clcache",
         "conda",
         "ctypes",
