Clarify pyside2 support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
     "python.analysis.extraPaths": ["Nuitka-factory"],
     "cSpell.words": [
         "appdirs",
+        "backport",
+        "backported",
         "bytecode",
         "ccache",
         "CEST",
