--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,18 +41,12 @@ jobs:
           invoke init
           invoke preprocessing
       
-      - name: 🔧 Build HTML (en)
+      - name: 🔧 Build HTML
         run: |
-
+          invoke doc
           invoke intl.language -l zh_CN
-          
-          cd docs
-          make html
-      
-      - name: 🔧 Build HTML (zh_CN ...)
-        run: |
-          cd docs
-          sphinx-build -D language=zh_CN -b html ./ ../output/html/zh_CN
+          cp -rf doc/_build/html output/html/
+          cp -rf sites/intl/_build/html/zh_CN output/html/zh_CN
 
       - name: 🚀 Deploy to GitHub pages
         uses: peaceiris/actions-gh-pages@v3.6.1
@@ -60,11 +54,9 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: output/html/
 
-      - name: delete temp
-        run: |
-          rm -rf Nuitka-main/
-          rm -rf Nuitka-develop/
-          rm -rf Nuitka-factory/
-          rm -rf output/doctrees/
-          rm -rf docs/images/
-          rm -rf docs/doc/
+      # - name: delete temp
+      #   run: |
+      #     rm -rf Nuitka-main/
+      #     rm -rf Nuitka-develop/
+      #     rm -rf Nuitka-factory/
+      #     rm -rf output/doctrees/
