modified:   .github/workflows/deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,14 +45,14 @@ jobs:
         run: |
           invoke doc
           invoke intl.language -l zh_CN
-          cp -rf doc/_build/html output/html/
-          cp -rf sites/intl/_build/html/zh_CN output/html/zh_CN
+          cp -rf doc/_build/html output/
+          cp -rf sites/intl/_build/html/zh_CN output/zh_CN
 
       - name: 🚀 Deploy to GitHub pages
         uses: peaceiris/actions-gh-pages@v3.6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: output/html/
+          publish_dir: output/
 
       # - name: delete temp
       #   run: |
