--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,8 @@
         "Doxygen",
         "elif",
         "EPEL",
+        "Europython",
+        "Hayen",
         "importlib",
         "Impressum",
         "isort",
