--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,12 +37,12 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install invoke
-          invoke init
-          invoke preprocessing
+          invoke virtualenv
       
       - name: 🔧 Build HTML
         run: |
-          invoke doc
+          invoke udate
+          invoke update -t build-site
           invoke intl.language -l zh_CN
           invoke output
 
