--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
       - name: 🔧 Build HTML
         run: |
           invoke update
-          invoke doc
+          invoke update -t build-site
           invoke intl.language -l zh_CN
           invoke output
 
