--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       # - main
-      - xin
+      - translation
       
 jobs:
   deploy-to-pages:
@@ -36,13 +36,14 @@ jobs:
         shell: bash
         run: |
           pip install --upgrade pip
+          pip install -r dev-requirements.txt
           pip install invoke
-          invoke init
-          invoke preprocessing
+          invoke virtualenv
       
       - name: 🔧 Build HTML
         run: |
-          invoke doc
+          invoke update
+          invoke update -t build-site
           invoke intl.language -l zh_CN
           invoke output
 
