Describe what pages to translate

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,10 +28,12 @@
         "elif",
         "EPEL",
         "Europython",
+        "gsoc",
         "Hayen",
         "importlib",
         "Impressum",
         "isort",
+        "jpegoptim",
         "libc",
         "libpython",
         "lxml",
@@ -40,6 +42,8 @@
         "nofollow",
         "Nuitka",
         "onefile",
+        "optipng",
+        "pipenv",
         "Podman",
         "pyenv",
         "pyproject",
@@ -56,6 +60,7 @@
         "tracebacks",
         "ucrt",
         "uncompiled",
+        "virtualenv",
         "whitebox"
     ],
 }
