modified:   .github/workflows/deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,7 @@ jobs:
           pip install invoke
 
       - name: Site initialization
+        run: |
           invoke virtualenv
           invoke run
           invoke run -t build-site
