--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Site initialization
         run: |
           invoke virtualenv
+          invoke run -t update-downloads
           invoke run -t update-docs
           invoke run -t build-site
 
