Make sure we actually see the "doc" target rather than old style build-site

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,13 +43,13 @@ jobs:
           invoke virtualenv
           invoke run -t update-downloads
           invoke run -t update-docs
-          invoke run -t build-site
 
       - name: 🔧 Build HTML
         run: |
           invoke doc.clean
           invoke doc
           invoke intl -l zh_CN
+          invoke run -t post-process
 
       - name: 🚀 Deploy to GitHub pages
         uses: peaceiris/actions-gh-pages@v3.6.1
