--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,8 @@ jobs:
           invoke doc.clean
           invoke doc
           invoke intl -l zh_CN
-          invoke run -t post-process
+          # TODO: Activate this
+          # invoke run -t post-process
 
       - name: 🚀 Deploy to GitHub pages
         uses: peaceiris/actions-gh-pages@v3.6.1
