--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,7 @@ jobs:
         run: |
           invoke doc.clean
           invoke doc
+          invoke doc -l zh_CN
           invoke intl -l zh_CN
           # TODO: Activate this
           # invoke run -t post-process
