fine-tuning 	modified:   update.py

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,12 +42,7 @@ jobs:
         run: |
           invoke virtualenv
           invoke run -t update-downloads
-
-      # - name: Site initialization
-      #   run: |
-      #     invoke virtualenv
-      #     invoke run -t update-downloads
-      #     invoke run -t update-docs
+          invoke run -t update-docs
 
       - name: 🔧 Build HTML
         run: |
