Minor cleanups, spelling and sourcery

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "bytecode",
         "ccache",
         "CEST",
+        "chdir",
         "clcache",
         "conda",
         "ctypes",
@@ -34,11 +35,13 @@
         "Impressum",
         "isort",
         "jpegoptim",
+        "kayhayen",
         "libc",
         "libpython",
         "lxml",
         "metaclass",
         "MSVC",
+        "noarch",
         "nofollow",
         "Nuitka",
         "numberize",
