--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "python.formatting.provider": "black",
     "python.analysis.extraPaths": ["Nuitka-develop"],
     "cSpell.words": [
+        "Annuitka",
         "appdirs",
         "backport",
         "backported",
