Add Nuitka Themida information

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,7 @@
         "numberize",
         "onefile",
         "optipng",
+        "Oreans",
         "pipenv",
         "Podman",
         "pyenv",
