--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
         "tracebacks",
         "ucrt",
         "uncompiled",
+        "unstripped",
         "virtualenv",
         "whitebox"
     ],
