modified:   pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
   "importlib-metadata>=4.12"
 ]
 requires-python = ">=3.10"
-readme = "README.md"
+readme = "README.rst"
 license = {file = "LICENSE"}
 
 [build-system]
