--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install invoke
+          pip install .
 
       - name: Site initialization
         run: |
