--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -15,14 +15,14 @@ jobs:
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: "3.10"
           cache: "pip"
           cache-dependency-path: "pyproject.toml"
 
       - name: 👷‍ init and preprocessing
         shell: bash
         run: |
-          pip install --upgrade pip
+          pip install --upgrade pip setuptools wheel
           pip install invoke pdm
           
 
