--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,43 +1,39 @@
-name: Deploy to GitHub Pages
+name: Deploy to GitHub Pages (Dev)
 
 on:
   push:
     branches:
       # - main
-      - translation
+      # - translation
+      - new-tool
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   deploy-to-pages:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.9]
-
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
-
-
-      - name: 🧳 Cache pip
-        uses: actions/cache@v2
-        with:
-          # This path is specific to Ubuntu
-          path: ~/.cache/pip
-          # Look to see if there is a cache hit for the corresponding requirements file
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-            ${{ runner.os }}-
+          python-version: "3.10"
+          cache: "pip"
+          cache-dependency-path: "pyproject.toml"
 
       - name: 👷‍ init and preprocessing
         shell: bash
         run: |
-          pip install --upgrade pip
           pip install invoke
-
       - name: Site initialization
         run: |
           invoke virtualenv
@@ -48,19 +44,24 @@ jobs:
         run: |
           invoke doc.clean
           invoke doc
-          invoke intl -l zh_CN
+          invoke intl -l zh_CN 
           invoke intl -l de_DE
           invoke run -t post-process
 
-      - name: 🚀 Deploy to GitHub pages
-        uses: peaceiris/actions-gh-pages@v3.6.1
+      - name: Setup Pages
+        uses: actions/configure-pages@main
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: output/
+          # Upload entire repository
+          path: 'output/'
+      - name: 🚀 Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@main
 
-      # - name: delete temp
-      #   run: |
-      #     rm -rf Nuitka-main/
-      #     rm -rf Nuitka-develop/
-      #     rm -rf Nuitka-factory/
-      #     rm -rf output/doctrees/
+      # - name: 🚀 Deploy to GitHub pages
+      #   uses: peaceiris/actions-gh-pages@v3.6.1
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: output/
+
