--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
   "rstfmt==0.0.11",
   "setuptools",
   "wheel",
+  "unidecode"
 ]
 requires-python = ">=3.10"
 readme = "README.rst"
