--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,19 +12,20 @@
 			"packages": "python3-dev,python3-pip"
 		},
 		"ghcr.io/devcontainers-contrib/features/bash-command:1": {
-			"command": "python3 -m pip install requests unidecode lxml rstfmt==0.0.13"
+			"command": "python3 -m pip install invoke pipenv"
 		},
 		"ghcr.io/hwaien/devcontainer-features/match-host-time-zone": {}
-	}
+	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "uname -a",
+	"postCreateCommand": "sudo dpkg-reconfigure tzdata -f none",
 
+	"postStartCommand": "python3 -m pip install -U pipenv && python3 -m pipenv install --dev",
 	// Configure tool-specific properties.
-	// "customizations": {},
+	"customizations": {}
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
