--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "ms-python.python"
+        "ms-python.python",
+        "aeschli.vscode-css-formatter"
     ]
 }
