Recommend this as well

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "ms-python.python",
         "aeschli.vscode-css-formatter",
-        "lextudio.restructuredtext"
+        "lextudio.restructuredtext",
+        "trond-snekvik.simple-rst"
     ]
 }
