--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,4 +73,7 @@
     "esbonio.server.enabled": true,
     "esbonio.sphinx.confDir": "",
     "editor.wordWrap": "bounded",
+    "githubPullRequests.ignoredPullRequestBranches": [
+        "main"
+    ],
 }
