--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,4 +72,8 @@
     ],
     "esbonio.server.enabled": true,
     "esbonio.sphinx.confDir": "",
+    "editor.wordWrap": "bounded",
+    "githubPullRequests.ignoredPullRequestBranches": [
+        "main"
+    ],
 }
