Added custom dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,4 +76,12 @@
     "githubPullRequests.ignoredPullRequestBranches": [
         "main"
     ],
+    "cSpell.customDictionaries": {
+        "custom-dictionary-workspace": {
+            "name": "custom-dictionary-workspace",
+            "path": "${workspaceFolder:Nuitka-website}/.cspell/custom-dictionary-workspace.txt",
+            "addWords": true,
+            "scope": "workspace"
+        }
+    },
 }
