Colors and underline for headerlinks too
* Also in devcontainer, do keep my_theme.css separate
  and used from the source directly, so pages do not
  have to be rebuilt for CSS changes to be visible,
  we now need a page reload only.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "clcache",
         "conda",
         "ctypes",
+        "devcontainer",
         "devel",
         "distutils",
         "Doxygen",
