Added GitLens extension for blaming lines easily

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,7 +38,8 @@
 				"trond-snekvik.simple-rst",
 				"shuworks.vscode-table-formatter",
 				"streetsidesoftware.code-spell-checker",
-				"redhat.vscode-xml"
+				"redhat.vscode-xml",
+				"eamodio.gitlens"
 			]
 		}
 	},
