--- a/Pipfile
+++ b/Pipfile
@@ -8,27 +8,35 @@ aiohttp = "*"
 watchdog = "*"
 pylint = "*"
 doc8 = "*"
-sphinx-autobuild = "*"
+sphinx-autobuild = "==2021.3.14"
 pipenv = "*"
 isort = "*"
-black = "==23.12.1"
+black = "==24.2.0"
 
 [packages]
 restructuredtext-lint = "*"
 lxml = "*"
-sphinx-copybutton = "*"
-sphinx-design = "*"
-sphinx-inline-tabs = "*"
-sphinx-rtd-theme = "*"
-"sphinxcontrib.twitter" = "*"
-ablog = "*"
-sphinxcontrib-youtube = "*"
-sphinx-favicon = "*"
-sphinx-sitemap = "*"
-rstfmt = "*"
-unicode = "*"
+sphinx-copybutton = "==0.5.2"
+sphinx-design = "==0.5.0"
+sphinx-inline-tabs = "==2023.4.21"
+sphinx-rtd-theme = "==2.0.0"
+"sphinxcontrib.twitter" = "==0.5.0"
+ablog = "==0.11.6"
+sphinxcontrib-youtube = "==1.4.1"
+sphinx-favicon = "==1.0.1"
+sphinx-sitemap = "==2.5.1"
+sphinxcontrib-applehelp = "==1.0.8"
+sphinxcontrib-devhelp = "==1.0.6"
+sphinxcontrib-htmlhelp = "==2.0.5"
+sphinxcontrib-jquery = "==4.1"
+sphinxcontrib-jsmath = "==1.0.1"
+sphinxcontrib-qthelp = "==1.0.7"
+sphinxcontrib-serializinghtml = "==1.1.10"
+rstfmt = "==0.0.14"
+unicode = "==2.9"
 unidecode = "*"
-sphinx-intl = "*"
+sphinx-intl = "==2.1.0"
+psutil = "*"
 
 [requires]
 python_version = "3.10"
