Adding asciinema cast to landing page
* With automatic updates possible for these casts

* Do not bundle its CSS files and JS files for best
  caching across the site.

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,13 @@
 Nuitka-factory
 Nuitka-develop
 Nuitka-main
+Nuitka-Tests
 output
 output.*
 .vscode/tags
 _build/
 *.mo
 node_modules
+*.bin
+*.dist
+*.build
