Add extension for esbonio

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,7 +39,8 @@
 				"shuworks.vscode-table-formatter",
 				"streetsidesoftware.code-spell-checker",
 				"redhat.vscode-xml",
-				"eamodio.gitlens"
+				"eamodio.gitlens",
+				"swyddfa.esbonio"
 			]
 		}
 	},
