Added esbonio, so it won't have to be installed by VS code

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ black = "==24.2.0"
 asciinema-automation = "*"
 ordered-set = "*"
 zstandard = "*"
+esbonio = "*"
 
 [packages]
 restructuredtext-lint = "*"
