Remove image link, not a useful target

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,4 +86,7 @@
         }
     },
     "editor.defaultFormatter": "vscode.css-language-features",
+    "[html]": {
+        "editor.defaultFormatter": "vscode.html-language-features"
+    },
 }
