--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "kayhayen",
         "libc",
         "libpython",
+        "listdir",
         "lxml",
         "metaclass",
         "MSVC",
@@ -61,6 +62,7 @@
         "PYTHONPATH",
         "redist",
         "Roadmap",
+        "runpy",
         "Scons",
         "Setuptools",
         "Tkinter",
