--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,14 +34,18 @@
         "gsoc",
         "Hayen",
         "imageio",
+        "imopen",
         "importlib",
         "Impressum",
         "isort",
+        "ispkg",
+        "joblib",
         "jpegoptim",
         "kayhayen",
         "libc",
         "libpython",
         "listdir",
+        "loky",
         "lxml",
         "metaclass",
         "MSVC",
@@ -72,7 +76,8 @@
         "uncompiled",
         "unstripped",
         "virtualenv",
-        "whitebox"
+        "whitebox",
+        "zstandard"
     ],
     "esbonio.server.enabled": true,
     "esbonio.sphinx.confDir": "",
