--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "cSpell.words": [
         "Annuitka",
         "appdirs",
+        "asyncgen",
         "backport",
         "backported",
         "bdist",
