Added landing page for segfaults

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,7 @@
         "runpy",
         "Scons",
         "Setuptools",
+        "SIGSEGV",
         "Tkinter",
         "traceback",
         "tracebacks",
