More consistent spellings
* "Nuitka Package Configuration" and "construct-based" should be used

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,7 @@
         "lxml",
         "metaclass",
         "MSVC",
+        "Multidist",
         "noarch",
         "nofollow",
         "Nuitka",
