--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,7 @@
         "Oreans",
         "pipenv",
         "Podman",
+        "postlist",
         "pyenv",
         "pyproject",
         "pyside",
