Bundles are no longer sold, this still implied it though

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "clcache",
         "conda",
         "ctypes",
+        "Dejong",
         "devcontainer",
         "devel",
         "distutils",
@@ -48,6 +49,7 @@
         "ispkg",
         "joblib",
         "jpegoptim",
+        "jsonschema",
         "kayhayen",
         "libc",
         "libpython",
@@ -59,6 +61,7 @@
         "Multidist",
         "noarch",
         "nofollow",
+        "NTFS",
         "Nuitka",
         "numberize",
         "onefile",
