--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
 	"name": "Ubuntu",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
- 	"image": "mcr.microsoft.com/devcontainers/base:ubuntu-22.04",
+ 	"image": "mcr.microsoft.com/devcontainers/base:ubuntu-24.04",
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
@@ -12,7 +12,7 @@
 			"packages": "python3-dev,python3-pip,bash-completion,optipng,jpegoptim,file,patchelf,ccache"
 		},
 		"ghcr.io/devcontainers-contrib/features/bash-command:1": {
-			"command": "python3 -m pip install invoke pipenv"
+			"command": "python3 -m pip install --break invoke pipenv"
 		},
 		"ghcr.io/hwaien/devcontainer-features/match-host-time-zone": {}
 	},
