--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ pylint = "*"
 doc8 = "*"
 sphinx-autobuild = "==2021.3.14"
 pipenv = "*"
-isort = "*"
+isort = "==5.13.2"
 black = "==24.10.0"
 asciinema-automation = "*"
 ordered-set = "*"
