--- a/Pipfile
+++ b/Pipfile
@@ -27,8 +27,10 @@ sphinx-rtd-theme = "==2.0.0"
 "sphinxcontrib.twitter" = "==0.5.0"
 ablog = "==0.11.6"
 sphinxcontrib-youtube = "==1.4.1"
+sphinx = "==7.4.7"
 sphinx-favicon = "==1.0.1"
 sphinx-sitemap = "==2.5.1"
+"sphinxcontrib.asciinema" = "*"
 sphinxcontrib-applehelp = "==1.0.8"
 sphinxcontrib-devhelp = "==1.0.6"
 sphinxcontrib-htmlhelp = "==2.0.5"
@@ -42,7 +44,6 @@ unidecode = "*"
 sphinx-intl = "==2.1.0"
 psutil = "*"
 setproctitle = "*"
-"sphinxcontrib.asciinema" = "*"
 
 [requires]
 python_version = "3.12"
