--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,113 +1,4 @@
 {
-    "files.trimTrailingWhitespace": true,
-    "files.trimFinalNewlines": true,
-    "files.exclude": {
-        "**/*.build": true,
-        "**/*.pyc": true,
-        "**/__pycache__": true,
-        "**/*.orig": true,
-        "**/*.tmp": true,
-    },
-    "python.analysis.extraPaths": ["Nuitka-develop"],
-    "cSpell.spellCheckOnlyWorkspaceFiles": true,
-    "cSpell.ignorePaths": [
-        ".git",
-        ".vscode",
-        "devcontainer.json",
-    ],
-    "cSpell.words": [
-        "Annuitka",
-        "appdirs",
-        "asyncgen",
-        "backport",
-        "backported",
-        "bdist",
-        "bytecode",
-        "ccache",
-        "CEST",
-        "chdir",
-        "clcache",
-        "conda",
-        "ctypes",
-        "Dejong",
-        "devcontainer",
-        "devel",
-        "distutils",
-        "Doxygen",
-        "dylib",
-        "elif",
-        "EPEL",
-        "Europython",
-        "Gitter",
-        "gsoc",
-        "Hayen",
-        "imageio",
-        "imopen",
-        "importlib",
-        "Impressum",
-        "isort",
-        "ispkg",
-        "joblib",
-        "jpegoptim",
-        "jsonschema",
-        "kayhayen",
-        "libc",
-        "libpython",
-        "listdir",
-        "loky",
-        "lxml",
-        "metaclass",
-        "MSVC",
-        "Multidist",
-        "noarch",
-        "nofollow",
-        "NTFS",
-        "Nuitka",
-        "numberize",
-        "onefile",
-        "optipng",
-        "Oreans",
-        "pipenv",
-        "Podman",
-        "postlist",
-        "pyenv",
-        "pyproject",
-        "pyside",
-        "pystone",
-        "PYTHONHASHSEED",
-        "PYTHONPATH",
-        "redist",
-        "Roadmap",
-        "runpy",
-        "Scons",
-        "Setuptools",
-        "SIGSEGV",
-        "Tkinter",
-        "traceback",
-        "tracebacks",
-        "ucrt",
-        "uncompiled",
-        "unstripped",
-        "virtualenv",
-        "whitebox",
-        "zstandard"
-    ],
-    "esbonio.server.enabled": true,
-    "esbonio.sphinx.confDir": "",
-    "editor.wordWrap": "bounded",
-    "githubPullRequests.ignoredPullRequestBranches": [
-        "main"
-    ],
-    "cSpell.customDictionaries": {
-        "custom-dictionary-workspace": {
-            "name": "custom-dictionary-workspace",
-            "path": "${workspaceFolder:Nuitka-website}/.cspell/custom-dictionary-workspace.txt",
-            "addWords": true,
-            "scope": "workspace"
-        }
-    },
-    "editor.defaultFormatter": "vscode.css-language-features",
-    "[html]": {
-        "editor.defaultFormatter": "vscode.html-language-features"
-    },
+    "workbench.colorTheme": "Default Dark Modern",
+    "workbench.startupEditor": "none"
 }
